Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) - (modificando tabela condesada.1.1) - (modificando tabela) - (modificando tabela 1.1) - ( modificando bottons(EIXO) - (modificando tabela resultado da consulta) - (resultado da consulta ok ) -

--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -314,11 +314,9 @@
           </thead>
 
 
-
-
           <tbody>
           <tr>
-            <span class="btn-primary"><td><b><h4>EIXO EQUIPE TECNICA</h4></b></td> </span>
+            <h4><td bgcolor="#1e90ff"><b>EIXO EQUIPE TECNICA</b></td></h4>
           </tr>
           &nbsp;
 
@@ -327,11 +325,11 @@
 
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
 
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
@@ -340,7 +338,7 @@
 
             <tr>
               <td><h5>SÃO PROMOVIDAS ATIVIDADES DE CAPACITAÇÃO PARA EQUIPE ?</h5></td>
-              <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+              <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
 
@@ -348,7 +346,7 @@
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
 
-              <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+              <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
           </tr>
@@ -356,61 +354,61 @@
           <hr color="white">
 
           <tr>
-            <span class="btn-primary"><td><b><h4>EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</h4></b></td> </span>
+            <h4> <td bgcolor="#1e90ff"><b>EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</b></td> </h4>
           </tr>
           &nbsp;
 
            <tr>
              <td><h5>O PAIF FUNCIONA CONFORME A RESOLUÇÃO CIT 04/2011?</h5></td>
 
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
-            <td><b>SIM</b></td>
-            <td><b>SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
 
 
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#d2691e">NÃO</b></td>
 
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b></td>
-            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>NÃO</b></td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><td bgcolor="#d2691e">NÃO</b></td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b></td>
           </tr>
 
           <tr>
             <td><h5>EXISTE REGULAMENTAÇÃO DOS BENEFÍCIOS EVENTUAIS?</h5></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
-            <td><b>SIM</b></td>
-            <td><b>SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
 
 
           <tr>
             <td><h5>A FREQUÊNCIA DAS VISITAS DOMICILIARES É COMPATÍVEL COM A NECESSIDADE DOS USUÁRIOS?</h5></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
-            <td><b>SIM</b></td>
-            <td><b>SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#d2691e">NÃO</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#d2691e">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#d2691e">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#d2691e">NÃO</b></td>
           </tr>
 
           <hr color="white">
 
           <tr>
-            <span class="btn-primary"><td><b><h4>EIXO INFRAESTRUTURA</h4></b></td> </span>
+            <h4><td bgcolor="#1e90ff"><b>EIXO INFRAESTRUTURA</b></td></h4>
           </tr>
 
           &nbsp;
@@ -418,17 +416,17 @@
           <tr>
             <td><h5>O EQUIPAMENTO POSSUI ACESSIBILIDADE CONFORME AS NORMAS ESTABELECIDAS PELA ABNT (NBR 9050)?</h5></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>NÃO</b></td>
-            <td><b>NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<td bgcolor="#a52a2a">NÃO</b></td>
           </tr>
 
           <tr>
@@ -450,7 +448,7 @@
   <ba-card class="col-xl-3 col-xlg-3"
   title="" baCardClass="medium-card">
   <img src="{{ ( 'questão'| baProfilePicture ) }}" width="45" height="45"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="btn-primary"><td><b><h3>QUESTÃO</h3></b></td></span>
-  <h4>A equipe está em conformidade com a norma nobrh? </h4>
+  <h4>&nbsp;&nbsp;A equipe está em conformidade com a nobrh? </h4>
 
   <hr color="white">
 
@@ -464,7 +462,12 @@
   <img src="{{ ( 'legislacao'| baProfilePicture ) }}" width="45" height="45"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="btn-primary"> <td><h3>LEGISLAÇÃO</h3></td></span>
   <h4>Resolução nobrh/suas nº 01 de 25 de janeiro de 2017.</h4>
 
+
+
   </ba-card>
   </div>
+
+<div class="row">
+  <div></div>
 
 
