--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -402,13 +402,13 @@
           <ba-card class="col-xl-6 col-xl-15"
                    title="FALE CONOSCO" baCardClass="feed-panel">
             <h4> <b> <img src="{{ ( 'fale conosco'| baProfilePicture ) }}" width="45" height="45"> &nbsp;Avenida Marechal Câmara, 370 - 6º Andar - Centro - Rio de Janeiro - RJ - 20.020-080 </b> </h4>
-            <h4> <b> <img src="{{ ( 'email'| baProfilePicture ) }}" width="45" height="45"> &nbsp;&nbsp;cao.cidadania@mprj.mp.br - 2531-9728 | 2220-2462 | 2215-1407 - FAX 2240-4653 </b> </h4>
+            <h4> <b> <img src="{{ ( 'email'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;cao.cidadania@mprj.mp.br <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="20" height="20"> 2531-9728 | 2220-2462 | 2215-1407 - FAX 2240-4653 </b> </h4>
 
 
-            <h3 class="card-title">_____________________________________________________________________________________________________________</h3>
+            <hr color="white">
 
 
-            <label class="col-sm-2 form-control-label" for="inputEmail3"><b>NOME</b></label>
+            <label class="col-sm-1 form-control-label" for="inputEmail3"><b>NOME</b></label>
               <div class="col-sm-10">
               </div>
             &nbsp;
