Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) - (modificando tabela condesada.1.1) - (modificando tabela) - (modificando tabela 1.1) - ( modificando bottons(EIXO) - (modificando tabela resultado da consulta) - (resultado da consulta ok ) - (organização da 2ª tela ) -

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -398,9 +398,12 @@
 
 
           &nbsp;
+
           <div>
           <ba-card class="col-xl-6 col-xl-15"
                    title="FALE CONOSCO" baCardClass="feed-panel">
+            <img src="{{ ( 'porte'| baProfilePicture ) }}" width="870" height="115">
+
             <h4> <b> <img src="{{ ( 'fale conosco'| baProfilePicture ) }}" width="45" height="45"> &nbsp;Avenida Marechal Câmara, 370 - 6º Andar - Centro - Rio de Janeiro - RJ - 20.020-080 </b> </h4>
             <h4> <b> <img src="{{ ( 'email'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;cao.cidadania@mprj.mp.br <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="20" height="20"> 2531-9728 | 2220-2462 | 2215-1407 - FAX 2240-4653 </b> </h4>
 
@@ -465,7 +468,7 @@
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>1. O QUE É CADASTRO ÚNICO?</b></h4></a>
               <div id="collapseOne" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <h3><b><i>&nbsp; O Cadastro Único para Programa Sociais do Governo Federal é um instrumento que identifica e caracteriza as famílias
+                  <h3><b><i>&nbsp; O Cadastro Único para Programas Sociais do Governo Federal é um instrumento que identifica e caracteriza as famílias
                   com renda mensal de até meio salário mínimo por pessoa ou de três salários mínimos no total.
                   Dessa forma, o Cadastro Único possibilita conhecer a realidade socioeconômica dessas famílias, trazendo informações
                   de todo o núcleo familiar, das características do domicílio, das formas de acesso a serviços públicos essenciais e também
