-Retirada do collapse-menu-link no navbar.

--- a/src/app/pages/tela2/psb/psb.scss
+++ b/src/app/pages/tela2/psb/psb.scss
@@ -91,3 +91,22 @@
     margin-top: 0;
   }
 }
+
+p{
+  font-size: 13px;
+}
+.utilizado{
+  color: #00cd00;
+}
+
+.nao-utilizado{
+  color:#bd0000;
+}
+
+.centro{
+  margin-left: 60px;
+}
+
+table{
+  text-align: center;
+}
