--- a/src/app/pages/tela2/programas/programas.html
+++ b/src/app/pages/tela2/programas/programas.html
@@ -1,10 +1,21 @@
-<div class="col-xl-3 col-lg-3 col-md-3">
-  TOTAL DE RECURSOS <p> 300,00 </p> <hr>
-  UTILIZADO <p> 300,00 </p> <hr>
-  NÃO UTILIZADO (OMISSÃO OU BLOQUEIO) <p> 0,00 </p>
+<div>
+  <table>
+    <tr>
+      <td> TOTAL DE RECURSOS </td>
+      <td class="utilizado">  UTILIZADO </td>
+      <td class="nao-utilizado">  NÃO UTILIZADO </td>
+    </tr>
+
+    <tr>
+      <td> 300,00 </td>
+      <td class="utilizado"> 300,00 </td>
+      <td class="nao-utilizado"> 0,00 </td>
+    </tr>
+
+  </table>
 </div>
 
-<div class="col">
+<div class="centro">
   <div class="row pie-charts">
     <div *ngFor="let chart of charts" class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-xs-12">
 
