- Ajuste do card DadosMunicipais2. - Criação do diretório mapa-estadual para inserção do mapa do rj.

--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -5,6 +5,10 @@
     </ba-card>
 
     <div>
+      <mapa-estadual></mapa-estadual>
+    </div>
+
+    <div align="right">
       <dados-municipais2></dados-municipais2>
     </div>
 
@@ -42,8 +46,11 @@
   </div>
 </div>
 
+<div>
+  <ano-buttons></ano-buttons>
+</div>
+
 <div class="row">
-  <ano-buttons> </ano-buttons>
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
       <ba-card title="PSE"> <pse> </pse></ba-card>
   </div>
