- Inserção do mapa estadual na tela. Só a figura de exemplo.

--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -4,8 +4,8 @@
    <rio-de-janeiro> </rio-de-janeiro>
     </ba-card>
 
-    <div>
-      <mapa-estadual></mapa-estadual>
+    <div class="col-xl-2 col-lg-2 col-md-2">
+      <mapa-estadual> </mapa-estadual>
     </div>
 
     <div align="right">
