--- a/src/app/pages/tela2/mapa-estadual/mapa-estadual.html
+++ b/src/app/pages/tela2/mapa-estadual/mapa-estadual.html
@@ -1,3 +1,3 @@
 <div>
-  <img src="{{ ( 'mapa-rj.jpg'| baProfilePicture ) }}" width="60" height="50" >
+  <img src="{{ ( 'mapa-rj2'| baProfilePicture ) }}">
 </div>
