Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) - (modificando tabela condesada.1.1) - (modificando tabela) - (modificando tabela 1.1) - ( modificando bottons(EIXO) - (modificando tabela resultado da consulta) - (resultado da consulta ok ) - (organização da 2ª tela ) - (arrumando 2ª tela) -

--- a/src/app/pages/tela4/tela4.html
+++ b/src/app/pages/tela4/tela4.html
@@ -1,3 +1,5 @@
+
+
 <hr color="white">
 
 <div class="button-wrapper">
@@ -53,22 +55,30 @@
         <div class="form-group">
           &nbsp;&nbsp; <textarea class="form-control" placeholder="Escreve aqui sua mensagem..."></textarea>
         </div>
-        <button type="submit" class="btn btn-success">&nbsp;&nbsp;&nbsp;ENVIAR&nbsp;&nbsp;&nbsp;</button>
         <div>
-          &nbsp;
-
-          &nbsp;
-          <ba-card class="col-xl-12 col xl-0"
-                   title="MANUAIS E CARTILHAS" baCardClass=""> &nbsp;&nbsp;&nbsp;<img src="{{ ( 'manuais'| baProfilePicture ) }}" width="45" height="45">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="130">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'população'| baProfilePicture ) }}" width="120" height="130">
-          </ba-card>
+        <button type="submit" class="btn btn-success">&nbsp;&nbsp;&nbsp;ENVIAR&nbsp;&nbsp;&nbsp;</button>
         </div>
-      </ba-card>
-    </div>
+&nbsp;
+
+        <ba-card class="col-xl-0 col xl-0"
+        title="MANUAIS E CARTILHAS" baCardClass=""> &nbsp;&nbsp;&nbsp;<img src="{{ ( 'manuais'| baProfilePicture ) }}" width="45" height="45">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="130">
+          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
+          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
+          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
+          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'população'| baProfilePicture ) }}" width="120" height="130">
+        </ba-card>
+        <div>
+
+
+        <div>
+        <ba-card class="col-xl-0 col xl-0"
+        title="" baCardClass="">
+        </ba-card>
+        </div>
+        </div>
+        </ba-card>
+        </div>
 
 
 
@@ -94,7 +104,7 @@
                 implementados pelo poder público nas três esferas do Governo. </i></b></h3>
             </div>
           </div>
-
+        </div>
 
           <hr color="white">
 
