- Alteração da cor dos ícones da tela 1. - Início da alteração de cores dos ícones da tela 2.

--- a/src/app/pages/tela1/pecasAtuacao/pecasAtuacao.html
+++ b/src/app/pages/tela1/pecasAtuacao/pecasAtuacao.html
@@ -3,7 +3,7 @@
     <thead >
     <tr class="black-muted-bg">
       <td class="pecas-icons"> </td>
-      <td > <img src="{{ ( 'pecas-de-atuacao'| baProfilePicture ) }}" width="40" height="50" > <b> PEÇAS DE ATUAÇÃO </b> <br>
+      <td > <img src="{{ ( 'pecas-de-atuacao2'| baProfilePicture ) }}" width="40" height="50" > <b> PEÇAS DE ATUAÇÃO </b> <br>
         Modelos padrão de documentos  MPRJ para utilização pelos usuários </td>
     </tr>
     </thead>
