--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
@@ -40,7 +40,7 @@
 .equipamentos{
   font-family: "Arial Black", arial-black;
   font-size: 15px;
-  color:lightgray;
+  color:#212121 ;
   text-align: center;
 
 }
@@ -48,7 +48,7 @@
  .municipio{
    font-family: "Arial Black", arial-black;
    font-size: 15px;
-   color: lightgray;
+   color: #212121 ;
 
  }
 
@@ -56,6 +56,6 @@
 hr{
   border: 1px solid;
   margin-top: auto;
-  margin-left: 70%;
-  width:30%;
+  margin-left: 73%;
+  width:28%;
 }
