--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -33,19 +33,22 @@
 
   <hr>
   <tr>
-    <td class="fonte">  <i class="ion-checkmark"></i> BENEFÍCIOS EVENTUAIS
+    <td class="fonte"> <img src="{{ ( 'check'| baProfilePicture ) }}" width="40" height="30" >
+      BENEFÍCIOS EVENTUAIS
       <img class="alinhadir" src="{{ ( 'beneficios-eventuais'| baProfilePicture ) }}" width="30" height="25" > </td>
   </tr>
 
   <hr>
   <tr>
-     <td class="fonte">  <i class="ion-checkmark"></i> PAIF
+     <td class="fonte"> <img src="{{ ( 'check'| baProfilePicture ) }}" width="40" height="30" >
+       PAIF
        <img class="alinhadir" src="{{ ( 'paif'| baProfilePicture ) }}" width="30" height="25" > </td>
    </tr>
 
   <hr>
   <tr>
-    <td class="fonte"> <i class="ion-close"></i> PAEFI
+    <td class="fonte"> &nbsp; <img src="{{ ( 'uncheck'| baProfilePicture ) }}" width="30" height="25" >
+      PAEFI
       <img class="alinhadir" src="{{ ( 'paefi'| baProfilePicture ) }}" width="30" height="25" > </td>
   </tr>
 </table>
