--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.scss
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.scss
@@ -2,6 +2,7 @@
   float:right;
 }
 
+
 .alinhacentro{
   text-align:right;
   width: 69%;
@@ -14,6 +15,7 @@
   font-size: 15px;
   font-weight: bold;
   color: white;
+  float: left;
 }
 
 .fonte2{
