- Alteração das cores de tela 1. - Alteração dos cards Rio de janeiro e Indicadores Sociais da tela 2.

--- a/src/app/pages/tela1/orcamento/orcamento.html
+++ b/src/app/pages/tela1/orcamento/orcamento.html
@@ -4,7 +4,7 @@
 
     <tr class="black-muted-bg">
       <td class="orcamento-icons"> </td>
-      <td> <img src="{{ ( 'orcamento2'| baProfilePicture ) }}" width="40" height="50" > <b> ORÇAMENTOS </b> <br>
+      <td> <img src="{{ ( 'orcamento2'| baProfilePicture ) }}" width="40" height="50" > <b> ORÇAMENTOS </b> <br><br>
         Relação de orçamentos federais, estaduais e municipais </td>
     </tr>
 
