--- a/src/app/pages/tela1/typography/typography.html
+++ b/src/app/pages/tela1/typography/typography.html
@@ -1,5 +1,8 @@
 <div class="typography-document-samples row">
 
+          <h5> SOBRE </h5>
+          <h5> <b> O PROJETO </b> </h5>
+          <hr>
           <p> O projeto pretende estruturar uma ação coordenada e estratégica do MPRJ
            para fiscalizar e exigir a implementação adequada da Política de Assistência
           Social, bem como provocar a intervenção dos atores sociais vocacionados
