--- a/src/app/pages/tela2/dadosMunicipais/dadosMunicipais.scss
+++ b/src/app/pages/tela2/dadosMunicipais/dadosMunicipais.scss
@@ -4,12 +4,17 @@
 
 p{
   font-size: 15px;
+  color: #1d1d1d;
+
 }
 .negrito{
   font-weight: bold;
+  color: #00003d;;
+  opacity: 0.8;
 }
 
 hr{
   border: 1px solid;
+  color: #00003d;
 
 }
