--- a/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
+++ b/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
@@ -1,7 +1,7 @@
-<div class="horizontal-scroll">
-   <table>
-      <tr>
-        <td> ESTADO <p class="fonte"> RIO DE JANEIRO </p></td>
+<div>
+   <table border="0">
+      <tr bgcolor="steelblue">
+        <th class="estado" colspan="3"> ESTADO <p class="fonte"> RIO DE JANEIRO </p></th>
       </tr>
 
       <tr>
@@ -9,24 +9,23 @@
       </tr>
 
       <tr>
-        <td class="alinhadir"> TOTAL DE <br> EQUIPAMENTOS <p class="dados"> 583 </p></td>
+        <td class="alinhadir"> TOTAL DE EQUIPAMENTOS <p class="dados"> 583 </p></td>
       </tr>
 
       <hr color="white">
+
+     <tr>
+       <td class="alinhacentro"> CRAS <p class="dados"> 450 </p> </td>
+       <td class="alinhacentro"> <br> CENTRO POP <p class="dados"> 19 </p> </td>
+     </tr>
+
+     <tr>
+       <td class="alinhacentro"> CREAS <p class="dados"> 114 </p></td>
+     </tr>
+
     </table>
 
 
-  <table>
-      <tr>
-        <td class="alinhacentro"> CRAS <p class="dados"> 450 </p> </td>
-        <td class="alinhadir"> <br> CENTRO POP <p class="dados"> 19 </p> </td>
-      </tr>
-
-    <tr>
-      <td class="alinhacentro"> CREAS <p class="dados"> 114 </p></td>
-    </tr>
-
-  </table>
-
   </div>
+
 
