--- a/src/app/pages/tela1/chartistJs/chartistJs.html
+++ b/src/app/pages/tela1/chartistJs/chartistJs.html
@@ -1,9 +1,9 @@
-<ba-card baCardClass="with-scroll" title="">
+<div>
         <ba-chartist-chart baChartistChartClass="ct-chart"
                            baChartistChartType="Line"
                            [baChartistChartData]="data['simpleLineData']"
                            [baChartistChartOptions]="data['simpleLineOptions']">
         </ba-chartist-chart>
               Distribuição de indicadores nas inspeções dos últimos doze meses
-</ba-card>
+</div>
 
