--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div>
-    <ba-card class="col-xl-2 col-lg-2 col-md-2">
+    <div class="col-xl-2 col-lg-2 col-md-2">
    <rio-de-janeiro> </rio-de-janeiro>
-    </ba-card>
+    </div>
 
     <div class="col-xl-2 col-lg-2 col-md-2">
       <mapa-estadual> </mapa-estadual>
@@ -36,13 +36,15 @@
 
 <div class="row">
   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <ba-card title="Dados Municipais" class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
-    <dados-municipais> </dados-municipais>
-  </ba-card>
 
-  <ba-card title="Indicadores Sociais" class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">
+  <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
+    <dados-municipais> </dados-municipais>
+  </div>
+
+  <div>
     <indicadores-sociais> </indicadores-sociais>
-  </ba-card>
+  </div>
+
   </div>
 </div>
 
