Junção das modificações Tais e Carlos
Telas 3 e 4 na barra de topo

--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -25,11 +25,11 @@
       <img  src="{{ ( 'dados-dos-municipios' | baProfilePicture ) }}" width="20px" height="20px"> Dados dos Municípios
     </a>
 
-    <a href="http://localhost:3000/#/pages/dashboard">
+    <a href="http://localhost:3000/#/pages/tela3">
      <img   src="{{ ( 'inspecoes' | baProfilePicture ) }}" width="35px" height="35px"> Inspeções
     </a>
 
-    <a href="http://localhost:3000/#/pages/dashboard">
+    <a href="http://localhost:3000/#/pages/tela4">
       <img src="{{ ( 'ajuda' | baProfilePicture ) }}" width="35px" height="35px"> Ajuda
     </a>
 
